--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -1,10 +1,29 @@
 <%- include('partials/header') %>
 
-<h2 class="mb-4">Secrets</h2>
-<ul class="list-group">
+<h2 class="mb-4">Your Secrets</h2>
+
+<a href="/submit" class="btn btn-primary mb-4">➕ Add Another Secret</a>
+
+<% if (secrets.length === 0) { %>
+  <div class="alert alert-info text-center">
+    You haven’t added any secrets yet. <a href="/submit">Click here</a> to add your first secret!
+  </div>
+<% } else { %>
+  <ul class="list-group">
     <% secrets.forEach(function(secret) { %>
-        <li class="list-group-item"><%= secret.content %></li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <form action="/edit" method="POST" class="d-flex w-100 me-2">
+          <input type="hidden" name="id" value="<%= secret._id %>">
+          <input type="text" name="newContent" value="<%= secret.content %>" class="form-control me-2" required>
+          <button type="submit" class="btn btn-success me-2">Update</button>
+        </form>
+        <form action="/delete" method="POST">
+          <input type="hidden" name="id" value="<%= secret._id %>">
+          <button type="submit" class="btn btn-danger">Delete</button>
+        </form>
+      </li>
     <% }); %>
-</ul>
+  </ul>
+<% } %>
 
 <%- include('partials/footer') %>
